--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Universal Media Ingest</title>
+    <title>Media Ingest System</title>
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cdefs%3E%3ClinearGradient id='grad' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%233b82f6;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%2310b981;stop-opacity:1' /%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='100' height='100' rx='20' fill='%231e293b'/%3E%3Cpath d='M30 25 L70 25 C72 25 73 26 73 28 L73 42 C73 44 72 45 70 45 L30 45 C28 45 27 44 27 42 L27 28 C27 26 28 25 30 25 Z' fill='url(%23grad)'/%3E%3Cpath d='M30 55 L70 55 C72 55 73 56 73 58 L73 72 C73 74 72 75 70 75 L30 75 C28 75 27 74 27 72 L27 58 C27 56 28 55 30 55 Z' fill='url(%23grad)' opacity='0.6'/%3E%3Cpath d='M45 28 L45 42 M50 28 L50 42 M55 28 L55 42' stroke='%231e293b' stroke-width='2' stroke-linecap='round'/%3E%3Cpath d='M35 60 L40 67 L48 58' stroke='%231e293b' stroke-width='2.5' stroke-linecap='round' stroke-linejoin='round' fill='none'/%3E%3C/svg%3E">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet">
